# simple-beast-client

./: CMakeLists.txt  vcpkg.json
